batchentry/trunk/src/objects/Chatter_Calendar_Prefs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Create_New_User__c</fullName>
        <description>The default user ID for new events created on the calendar</description>
        <label>Create New User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Start_Hour__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>The hour of the day that the calendar should begin on</inlineHelpText>
        <label>Day Start Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Color__c</fullName>
        <label>Event Color</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Group__c</fullName>
        <label>Recent Group</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_View__c</fullName>
        <label>Recent View</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>background_color__c</fullName>
        <label>background color</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>color__c</fullName>
        <label>color</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Chatter Calendar Prefs</label>
</CustomObject>